Lista de pedidos pendientes y recepcion de pedidos lista

--- a/plantilla.html
+++ b/plantilla.html
@@ -49,7 +49,7 @@
 <body>
     <p>Saludos, distinguidos {nombreSuplidor}, estamos requiriendo de los siguientes productos</p>
     <table class='bd-sp bor-tb'>
-        <caption>Orden de compra SportZone</caption>
+        <caption>Orden de compra SportZone (#101)</caption>
         <tr>
           <th>Código</th>
           <th>Nombre producto</th>
